--- a/pages/cosmatic.html
+++ b/pages/cosmatic.html
@@ -23,21 +23,21 @@
 </style>
 </head>
 <body>
-    <h1 class="fw-bold text-center mt-4">Groceries-Product</h1>
+    <h1 class="fw-bold text-center mt-4">Beauty-Care-Product</h1>
    
     <div class="container d-flex mt-5">
     
     <div class="card me-5 p-3 mb-5" style="width: 50rem;">
         <img src="../pages/Img/bliss-skin-care.jpg" class="card-img-top " alt="...">
         <div class="card-body">
-          <h5 class="card-title">Biscuit	
+          <h5 class="card-title">Blissful Skin
           </h5>
           <p class="card-text">Satiate your taste a buds right away! Enrich with chocolate sponge & truffle cream. </p>
           <p class="fw-bold">₹ 449
             <s class="fw-light">₹ 499</s>
             (10% OFF)</p>
             <p> 4.9 ⭐ (1300 Reviews)</p>
-            <a href="./AddtoCart.html" class="btn btn-color text-light d-inline-flex justify-content-evenly">Add to Cart</a>
+            <a href="/pages/addtocard.html" class="btn btn-color text-light d-inline-flex justify-content-evenly">Add to Cart</a>
           <a href="" class="btn btn-color text-light d-inline-flex justify-content-evenly ">Buy Now</a>
         </div>
       </div>
@@ -46,7 +46,7 @@
       <div class="card me-5 p-3 mb-5" style="width: 50rem;">
         <img src="../pages/Img/purebeauty-monoi.avif" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Sunflower Oil	
+          <h5 class="card-title">Pure Beauty
           </h5>
           <p class="card-text">A symphony of opulent flavors awaits discerning cake aficionados, offering a velvety aftertaste that lingers in the senses</p>
           <p class="fw-bold">₹ 549
@@ -61,7 +61,7 @@
       <div class="card me-5 p-3 mb-5" style="width: 50rem;">
         <img src="../IMGS/flavouredcakes/chococake3.webp" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Soap	</h5>
+          <h5 class="card-title">Chocolate Cake N Milk Brooch</h5>
           <p class="card-text"> This cake is all about making you fall in love with it. The smoothing chocolaty texture with choco dust can easily fulfill your chocolate craving in a most perfect manner.</p>
           <p class="fw-bold">₹ 1050
             <s class="fw-light">₹ 1100</s>
@@ -76,7 +76,7 @@
         <div class="card  me-5 p-3 mb-5" style="width: 50rem;">
             <img src="../IMGS/flavouredcakes/chococake4.webp" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title"></h5>
+              <h5 class="card-title">Chocolate Ferrero Rocher Cake</h5>
               <p class="card-text"> Made of three layers of rich Chocolate cream, Ferrero Rocher crunch and hazelnut flavour, this Choco ball treat is beyond doubt an irresistible treat.</p>
               <p class="fw-bold">₹ 949
                 <s class="fw-light">₹ 999</s>
@@ -721,6 +721,6 @@
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-      
+      ></script>
 </body>
 </html>
