--- a/pages/Index.html
+++ b/pages/Index.html
@@ -132,6 +132,7 @@
             <div class="dropdown-menu">
               <a class="dropdown-item" href="#">Veg</a>
               <a class="dropdown-item" href="#">Non-veg</a>
+              <a class="dropdown-item" href="#">Indian-dishes</a>
               <a class="dropdown-item" href="#">All Dishes</a>
             </div>
           </li>
